docs/0.14/_sources/api/gammapy.data.GTI.rst.txt
GTI
===

.. currentmodule:: gammapy.data

.. autoclass:: GTI
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GTI.time_delta
      ~GTI.time_ref
      ~GTI.time_start
      ~GTI.time_stop
      ~GTI.time_sum

   .. rubric:: Methods Summary

   .. autosummary::

      ~GTI.copy
      ~GTI.create
      ~GTI.read
      ~GTI.select_time
      ~GTI.stack
      ~GTI.union

   .. rubric:: Attributes Documentation

   .. autoattribute:: time_delta
   .. autoattribute:: time_ref
   .. autoattribute:: time_start
   .. autoattribute:: time_stop
   .. autoattribute:: time_sum

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: read
   .. automethod:: select_time
   .. automethod:: stack
   .. automethod:: union
