docs/0.18.2/_sources/api/gammapy.data.GTI.rst.txt
GTI
===

.. currentmodule:: gammapy.data

.. autoclass:: GTI
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~GTI.time_delta
      ~GTI.time_intervals
      ~GTI.time_ref
      ~GTI.time_start
      ~GTI.time_stop
      ~GTI.time_sum

   .. rubric:: Methods Summary

   .. autosummary::

      ~GTI.copy
      ~GTI.create
      ~GTI.from_time_intervals
      ~GTI.group_table
      ~GTI.read
      ~GTI.select_time
      ~GTI.stack
      ~GTI.union
      ~GTI.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: time_delta
   .. autoattribute:: time_intervals
   .. autoattribute:: time_ref
   .. autoattribute:: time_start
   .. autoattribute:: time_stop
   .. autoattribute:: time_sum

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: from_time_intervals
   .. automethod:: group_table
   .. automethod:: read
   .. automethod:: select_time
   .. automethod:: stack
   .. automethod:: union
   .. automethod:: write
